@@ -7,6 +7,7 @@ Revision history for Cassandra-Client
       * Support for proper retry settings
       * Handle request backlogs by queueing them or failing them early
       * Add stack traces to asynchronous queries with errors
+      * Fix handling of nested types, like list<frozen<map<int,boolean>>>
 
 0.07    2016/10/10
 
